# inventoryproject

./: README.md  pyproject.toml  yt.txt
inventory/: db.sqlite3
inventory/dashboard/: admin.py  models.py  urls.py
inventory/dashboard/migrations/: 0001_initial.py  0002_alter_product_categoria.py  0003_alter_product_categoria_order.py  0003_order.py  0004_alter_order_options_alter_product_options_and_more.py
inventory/inventory/: settings.py  urls.py
inventory/templates/dashboard/: index.html  order.html  product.html  staff.html
inventory/templates/partials/: base.html  nav.html  topnav.html
inventory/templates/user/: register.html
inventory/user/: forms.py  views.py
