[tool.poetry]
name = "inventoryproject"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.15"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
